Dynamic Plotting using plotly

--- a/Python Scripts/Met Office Prediction Accuracy.ipynb
+++ b/Python Scripts/Met Office Prediction Accuracy.ipynb
@@ -691,6 +691,164 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "word = 'Darren'\n",
+    "import pymongo\n",
+    "connection = pymongo.MongoClient('localhost', 27017)\n",
+    "db = connection.metoffice\n",
+    "collection = db.tweets_dt\n",
+    "data = collection.find({'text': {'$regex': word}}, {'text': 1, '_id': 0, 'date':1})\n",
+    "dateList = db.weather_dt.find({},{'date obtained':1,'_id':0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "initDateList = [d['date obtained'] for d in dateList]\n",
+    "dateDict = {}\n",
+    "for i in initDateList:\n",
+    "    if i not in dateDict.keys():\n",
+    "        dateDict[i] = 0\n",
+    "tweetDates = [d['date'] for d in data]\n",
+    "for t in tweetDates:\n",
+    "    dateDict[t] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(pd.Series(dateDict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"762f4e86-8fbb-4905-a398-d6426341cc94\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"762f4e86-8fbb-4905-a398-d6426341cc94\", [{\"y\": [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 9, 2, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \"x\": [\"2016-12-06\", \"2016-12-07\", \"2016-12-08\", \"2016-12-09\", \"2016-12-10\", \"2016-12-11\", \"2016-12-12\", \"2016-12-13\", \"2016-12-14\", \"2016-12-15\", \"2016-12-16\", \"2016-12-17\", \"2016-12-18\", \"2016-12-19\", \"2016-12-20\", \"2016-12-21\", \"2016-12-22\", \"2016-12-23\", \"2016-12-24\", \"2016-12-25\", \"2016-12-26\", \"2016-12-27\", \"2016-12-28\", \"2016-12-29\", \"2016-12-30\", \"2016-12-31\", \"2017-01-01\", \"2017-01-02\", \"2017-01-03\", \"2017-01-04\", \"2017-01-05\", \"2017-01-06\", \"2017-01-07\", \"2017-01-08\", \"2017-01-09\"], \"type\": \"bar\"}], {\"bargap\": 0, \"title\": \"Darren tweets\"}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    go.Bar(\n",
+    "        x = df.index,\n",
+    "        y = df[0]\n",
+    "    )\n",
+    "]\n",
+    "layout = Layout(\n",
+    "    bargap = 0,\n",
+    "    title = word + ' tweets'\n",
+    ")\n",
+    "fig = Figure(data = data, layout = layout)\n",
+    "iplot(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'https://plot.ly/~dt5513/24'"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py.sign_in('dt5513','ndLpW7eT8m44x2LTGWli')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = py.plot(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'https://plot.ly/~dt5513/30'"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'https://plot.ly/~dt5513/30'"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
