--- a/Python Scripts/Met Office Prediction Accuracy.ipynb
+++ b/Python Scripts/Met Office Prediction Accuracy.ipynb
@@ -11,11 +11,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Student16\\Anaconda2\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning:\n",
+      "C:\\Users\\Student26\\Anaconda2\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning:\n",
       "\n",
       "This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "\n",
-      "C:\\Users\\Student16\\Anaconda2\\lib\\site-packages\\sklearn\\grid_search.py:43: DeprecationWarning:\n",
+      "C:\\Users\\Student26\\Anaconda2\\lib\\site-packages\\sklearn\\grid_search.py:43: DeprecationWarning:\n",
       "\n",
       "This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
       "\n"
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +193,7 @@
     "fourDict = {}\n",
     "metOfficeDict = {}\n",
     "for f in fourW:\n",
-    "    fourDict[f] = list(weather[f])\n",
+    "    fourDict[f] = list(weather[f + 'Factor'])\n",
     "    metOfficeDict[f] = list(weather[f+'W'])\n",
     "wtList = []\n",
     "moList = []\n",
@@ -228,7 +228,7 @@
     "    #wtList.append(max(tempVals, key=tempVals.get))\n",
     "    #moList.append(max(tempValsMO, key=tempValsMO.get))\n",
     "    if moList[counter][0] in wtList[counter]:\n",
-    "        accuracyList.append(1.0/len(wtList[counter]))\n",
+    "        accuracyList.append(1.0)\n",
     "    else:\n",
     "        accuracyList.append(0)\n",
     "    counter += 1"
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +393,7 @@
        " 0,\n",
        " 0,\n",
        " 1.0,\n",
-       " 0.5,\n",
+       " 1.0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -467,7 +467,7 @@
        " 1.0,\n",
        " 1.0,\n",
        " 1.0,\n",
-       " 0.5,\n",
+       " 1.0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -495,7 +495,7 @@
        " 0]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -519,22 +519,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div id=\"9bc11f94-4f65-4eb9-8ad9-34d557e6d121\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9bc11f94-4f65-4eb9-8ad9-34d557e6d121\", [{\"y\": [0.2, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.16666666666666666, 0.0, 0.0, 0.0, 0.0, 0.0, 0.125, 0.25, 0.0, 0.25, 0.0, 0.0, 0.0, 0.1875, 0.25, 0.0, 0.375, 0.0, 0.5, 0.125, 0.0, 0.0, 0.5625, 0.125, 0.25, 0.0], \"x\": [\"2016-12-06\", \"2016-12-07\", \"2016-12-08\", \"2016-12-09\", \"2016-12-10\", \"2016-12-11\", \"2016-12-12\", \"2016-12-13\", \"2016-12-14\", \"2016-12-15\", \"2016-12-16\", \"2016-12-17\", \"2016-12-18\", \"2016-12-19\", \"2016-12-20\", \"2016-12-21\", \"2016-12-22\", \"2016-12-23\", \"2016-12-24\", \"2016-12-25\", \"2016-12-26\", \"2016-12-27\", \"2016-12-28\", \"2016-12-29\", \"2016-12-30\", \"2016-12-31\", \"2017-01-01\", \"2017-01-02\", \"2017-01-03\", \"2017-01-04\", \"2017-01-05\", \"2017-01-06\", \"2017-01-07\", \"2017-01-08\"], \"type\": \"scatter\"}], {}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "PlotlyDictKeyError",
+     "evalue": "'name' is not allowed in 'yaxis'\n\nPath To Error: ['yaxis']['name']\n\nValid attributes for 'yaxis' at path ['yaxis'] under parents ['layout']:\n\n    ['showexponent', 'showticklabels', 'ticksuffix', 'color',\n    'categoryarray', 'showticksuffix', 'gridwidth', 'titlefont',\n    'linecolor', 'mirror', 'tickvalssrc', 'nticks', 'linewidth',\n    'autorange', 'ticktextsrc', 'showspikes', 'tickprefix', 'position',\n    'tickformat', 'tickmode', 'title', 'spikecolor', 'ticks', 'spikesides',\n    'overlaying', 'spikethickness', 'rangemode', 'showtickprefix',\n    'autotick', 'zeroline', 'domain', 'gridcolor', 'type', 'side',\n    'separatethousands', 'zerolinewidth', 'ticklen', 'categoryorder',\n    'hoverformat', 'backgroundcolor', 'fixedrange', 'showline', 'ticktext',\n    'showgrid', 'tickvals', 'tickfont', 'tickwidth', 'tick0', 'tickangle',\n    'showbackground', 'dtick', 'showaxeslabels', 'zerolinecolor', 'range',\n    'categoryarraysrc', 'calendar', 'tickcolor', 'anchor', 'exponentformat']\n\nRun `<yaxis-object>.help('attribute')` on any of the above.\n'<yaxis-object>' is the object at ['yaxis']",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mPlotlyDictKeyError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-872e7c6034d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     ),\n\u001b[1;32m     10\u001b[0m     xaxis = dict(\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'Date'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     )\n\u001b[1;32m     13\u001b[0m )\n",
+      "\u001b[0;32mC:\\Users\\Student26\\Anaconda2\\lib\\site-packages\\plotly\\graph_objs\\graph_objs.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    373\u001b[0m         \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mval\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    374\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m \u001b[1;32min\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 375\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__setitem__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_raise\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0m_raise\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    376\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    377\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Student26\\Anaconda2\\lib\\site-packages\\plotly\\graph_objs\\graph_objs.pyc\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value, _raise)\u001b[0m\n\u001b[1;32m    428\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    429\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_attribute_role\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'object'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 430\u001b[0;31m             \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_value_to_graph_object\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_raise\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0m_raise\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    431\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mPlotlyDict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPlotlyList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    432\u001b[0m                 \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Student26\\Anaconda2\\lib\\site-packages\\plotly\\graph_objs\\graph_objs.pyc\u001b[0m in \u001b[0;36m_value_to_graph_object\u001b[0;34m(self, key, value, _raise)\u001b[0m\n\u001b[1;32m    539\u001b[0m         \u001b[1;31m# this can be `None` when `_raise == False`\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m         return GraphObjectFactory.create(key, value, _raise=_raise,\n\u001b[0;32m--> 541\u001b[0;31m                                          _parent=self, _parent_key=key)\n\u001b[0m\u001b[1;32m    542\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    543\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mhelp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattribute\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_help\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Student26\\Anaconda2\\lib\\site-packages\\plotly\\graph_objs\\graph_objs.pyc\u001b[0m in \u001b[0;36mcreate\u001b[0;34m(object_name, *args, **kwargs)\u001b[0m\n\u001b[1;32m    795\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mPlotlyList\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    796\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 797\u001b[0;31m                 \u001b[1;32mreturn\u001b[0m \u001b[0mPlotlyDict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    798\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    799\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Student26\\Anaconda2\\lib\\site-packages\\plotly\\graph_objs\\graph_objs.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    373\u001b[0m         \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mval\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    374\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m \u001b[1;32min\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 375\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__setitem__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_raise\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0m_raise\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    376\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    377\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Student26\\Anaconda2\\lib\\site-packages\\plotly\\graph_objs\\graph_objs.pyc\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value, _raise)\u001b[0m\n\u001b[1;32m    424\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0m_raise\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m                     \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 426\u001b[0;31m                     \u001b[1;32mraise\u001b[0m \u001b[0mexceptions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPlotlyDictKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    427\u001b[0m                 \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mPlotlyDictKeyError\u001b[0m: 'name' is not allowed in 'yaxis'\n\nPath To Error: ['yaxis']['name']\n\nValid attributes for 'yaxis' at path ['yaxis'] under parents ['layout']:\n\n    ['showexponent', 'showticklabels', 'ticksuffix', 'color',\n    'categoryarray', 'showticksuffix', 'gridwidth', 'titlefont',\n    'linecolor', 'mirror', 'tickvalssrc', 'nticks', 'linewidth',\n    'autorange', 'ticktextsrc', 'showspikes', 'tickprefix', 'position',\n    'tickformat', 'tickmode', 'title', 'spikecolor', 'ticks', 'spikesides',\n    'overlaying', 'spikethickness', 'rangemode', 'showtickprefix',\n    'autotick', 'zeroline', 'domain', 'gridcolor', 'type', 'side',\n    'separatethousands', 'zerolinewidth', 'ticklen', 'categoryorder',\n    'hoverformat', 'backgroundcolor', 'fixedrange', 'showline', 'ticktext',\n    'showgrid', 'tickvals', 'tickfont', 'tickwidth', 'tick0', 'tickangle',\n    'showbackground', 'dtick', 'showaxeslabels', 'zerolinecolor', 'range',\n    'categoryarraysrc', 'calendar', 'tickcolor', 'anchor', 'exponentformat']\n\nRun `<yaxis-object>.help('attribute')` on any of the above.\n'<yaxis-object>' is the object at ['yaxis']"
+     ]
     }
    ],
    "source": [
@@ -542,7 +547,16 @@
     "    x = accDF.index,\n",
     "    y = accDF[0]\n",
     ")\n",
-    "fig = Figure(data = [data])\n",
+    "layout = Layout(\n",
+    "    title = 'The Met Office Weather Forecasts Agreement Rate with the Weather from Tweets',\n",
+    "    yaxis = dict(\n",
+    "        title = 'Agreement Rate'\n",
+    "    ),\n",
+    "    xaxis = dict(\n",
+    "        t = 'Date'\n",
+    "    )\n",
+    ")\n",
+    "fig = Figure(data = [data], layout=layout)\n",
     "iplot(fig)"
    ]
   },
